--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: npm run test
 
   Integration:
+    needs: Test
     runs-on: ubuntu-latest
     environment: integration
     steps:
